{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "aa6c3f1c-0bcf-40aa-b5b3-c78957401d3a",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Button",
                    "id": "50843722-0319-4536-b829-ccd45e292df1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "1f771de9-ad42-4294-87a1-20c8bcdd32e6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "4db4469f-fa78-4e27-86f6-1f913562171d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Glide",
                    "type": "Button",
                    "id": "dabed53f-5542-42e0-80b0-6aae1286278d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "aa5eb259-3450-40dd-aeb7-17bce964e341",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8448f50a-072c-4cad-b67c-07fffdd2d757",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "9d22b0cd-6243-4fce-ac65-f68dd38e0630",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "3f428ec1-786b-45a3-83d2-f82c267dc8b0",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "73bffbba-6ce2-4f74-832d-6a80520d5673",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "22e630b5-eb8c-4d20-bc5e-e67b617c5f83",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c51a095f-0602-45aa-bc26-89097aaeac57",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1ecfc533-a38b-41c5-b68a-aa7af69bccfd",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Glide",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}